# reckless_ioc

./: CMakeLists.txt  README.md  library.cpp  library.h
include/application/: ApplicationContext.h
include/application/config/: config.h
include/factory/: component_factory.h  factory_base.h
include/ioc/: ioc_container.h  type_id_assigner.h
include/log/: logger.h
patterns/: ServiceLocator.puml  TemplateMethodDesign.puml
patterns/strategy_pattern/: StrategyPattern.puml  StrategyPatternSequence.puml
plantuml/: full.puml  plan.puml
plantuml/application/: ApplicationContext.puml
plantuml/application/config/: config.puml
plantuml/factory/: component_factory.puml  factory_base.puml
plantuml/ioc/: ioc_container.puml  type_id_assigner.puml
plantuml/logger/: logger.puml
